Fixed issue on Safari of input fields jumping to left - webkit autofill button issue resolved

--- a/src/CustomForm.css
+++ b/src/CustomForm.css
@@ -73,6 +73,14 @@
   color: #d56d69;
 }
 
+input::-webkit-contacts-auto-fill-button {
+  visibility: hidden;
+  display: none !important;
+  pointer-events: none;
+  position: absolute;
+  right: 0;
+}
+
 p {
   margin: 0;
 }
